<resources>
    <string name="app_name">Api Laravel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">Api Laravel Móvil</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- TODO: boton de navegacion de ajustes y ayudas -->
    <string name="action_settings">Settings</string>
    <string name="action_sincroni">Sincronizar</string>

    <string name="menu_home">Home</string>
    <string name="menu_client">Clientes</string>
    <string name="menu_alamacen">Almacenes</string>
    <string name="menu_clientes">Productos</string>
    <string name="menu_productos">Productos</string>
    <!--almacen titulo-->
    <string name="menu_almacen">Almacenes</string>
    <string name="menu_Clientess">Clientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Petición jusjus</string>
    <string name="clienteTextbnt">Solicitar Json</string>

    <!-- Fracmento home -->
    <string name="txthome">Bienvenido</string>

    <!-- Fracmento datos producto -->
    <string name="txtcodigo">Código</string>
    <string name="txtnombre">Nombre</string>
    <string name="txtmarca">Marca</string>
    <string name="txtdescrip">Descripción</string>
    <string name="txtprecio">Precio</string>
    <string name="txtcantidad">Cantidad</string>
    <string name="txtesta">Estatus</string>
    <string name="txtbtng">Guardar</string>
    <string name="txtbtnborrar">Eliminar</string>

    <!-- Fracmento almacenes -->
    <string name="txtnomb_a">nombre</string>
    <string name="txttel_a">telefono</string>
    <string name="txtpais_a">pais</string>
    <string name="txtmuni_a">municipio</string>
    <string name="txtlocli_a">localidad</string>
    <string name="txtcp_a">cp</string>
    <string name="txtcalle_a">calle</string>

    <!-- Fracmento clientes -->
    <string name="txtnamec">nombre</string>
    <string name="txtemailc">email</string>
    <string name="txttelc">telefono</string>
    <string name="txtpaisc">pais</string>
    <string name="txtmunic">municipio</string>
    <string name="txtlocalic">localidad</string>
    <string name="txtcpc">cp</string>

    <!--Material desing-->
    <string name="textmail">Correo Electronico</string>
    <string name="textmailfigure">Mail</string>
    <string name="textpass">Password</string>
    <string name="textlogin">login</string>
    <string name="textloginregister">Register</string>
    <string name="textslogan">Welcome Krankis</string>

    <!--Material desing menu principal-->
    <string name="txtcamara">Tomar foto</string>
    <string name="txtgps">ir a google</string>

</resources>