<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kranki.appprofe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!--  Menu de clientes  -->
    <fragment
        android:id="@+id/nav_client"
        android:name="com.kranki.appprofe.ui.gallery.GalleryFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_gallery" />
    <!--  Menu de almacen  -->
    <fragment
        android:id="@+id/nav_almacen"
        android:name="com.kranki.appprofe.ui.almacen.fragment_almacen"
        android:label="@string/menu_alamacen"
        tools:layout="@layout/fragment_almacen" />
    <!--  Menu de LISTAR PRODUCTOS  -->
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.kranki.appprofe.ui.clientes.ClienteFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_cliente" />
    <!--  Menu de REGISTRAR PRODUCTOS  -->
    <fragment
        android:id="@+id/nav_regis_datos"
        android:name="com.kranki.appprofe.ui.producto.DatosProducto"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_datos_producto" />
    <!--  Menu de REGISTRAR Almacen  -->
    <fragment
        android:id="@+id/nav_regis_datos_Almacen"
        android:name="com.kranki.appprofe.ui.almacen.almacenAddFragment"
        android:label="@string/menu_alamacen"
        tools:layout="@layout/fragment_almacen_add" />

</navigation>