<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">
    <!--texto login-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="45sp"
            android:fontFamily="@font/orange_juice"
            android:paddingTop="10dp"
            android:text="@string/textslogan"/>
    <!--logo login-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingTop="15dp"
        android:src="@drawable/gitlogin" />

    <!--login-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtusuariologin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textmail"
        app:boxBackgroundMode="outline"
        app:endIconContentDescription="@string/textmailfigure"
        app:endIconMode="custom"
        app:endIconTint="@color/black"
        app:startIconTint="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtpasswordlogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textpass"
        android:paddingTop="25dp"
        app:boxBackgroundMode="outline"
        app:endIconContentDescription="@string/textmailfigure"
        app:startIconTint="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--boton login-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnAccesar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textlogin" />
    </LinearLayout>
    <!--boton login-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/idbtnregisterlogin"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textloginregister" />
    </LinearLayout>


</LinearLayout>